# HangmanGame

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  docker-compose.yml  main.cpp  makefile  readmetxt
app/: Application.cpp  Application.h
app/HangmanDrawer/: HangMan.cpp  HangMan.h
app/game/: Game.cpp  Game.h
app/hangmanDrawer/: HangMan.cpp  HangMan.h
app/passwordFileReader/: PasswordFileReader.cpp  PasswordFileReader.h  passwords.txt
app/player/: Player.cpp  Player.h  PlayerCreator.cpp  PlayerCreator.h
app/wordManager/: WordManager.cpp  WordManager.h
scripts/: blank_spaces_remover.py  chmod_for_password_txt.sh
tests/: CMakeLists.txt
tests/appTests/: FirstTest.cpp  HangManTests.cpp  PasswordFileReaderTests.cpp  PlayerTests.cpp  WordManagerTests.cpp
utils/logger/: Logger.cpp  Logger.h
